[gd_scene load_steps=9 format=3 uid="uid://blaq6g61xreed"]

[ext_resource type="Script" path="res://world.gd" id="1_f7c1g"]
[ext_resource type="PackedScene" uid="uid://grhhbpsu1hw3" path="res://ambientacion.tscn" id="1_f127c"]
[ext_resource type="Texture2D" uid="uid://ddkbeh7tg583i" path="res://addons/kenney_particle_pack/circle_05.png" id="3_ibqq4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qymbr"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_sytma"]
sky_material = SubResource("ProceduralSkyMaterial_qymbr")

[sub_resource type="Environment" id="Environment_my184"]
background_mode = 2
sky = SubResource("Sky_sytma")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjinq"]
bg_color = Color(0.729412, 0, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uuvn6"]
bg_color = Color(0.564706, 1, 0.247059, 1)

[node name="World" type="Node"]
script = ExtResource("1_f7c1g")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, -0.163856, 0.718173, 0.676298, -0.472389, 0.544727, -0.692908, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_my184")

[node name="ambientacion" parent="." instance=ExtResource("1_f127c")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="mainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 433.0
offset_top = 219.0
offset_right = -433.0
offset_bottom = -219.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/mainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/mainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="hostButton" type="Button" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="joinButton" type="Button" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="addressentry" type="LineEdit" parent="CanvasLayer/mainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "enter address to join"
alignment = 1

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("3_ibqq4")
stretch_mode = 5

[node name="healthBar" type="ProgressBar" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 287.0
offset_top = 7.0
offset_right = -287.0
offset_bottom = -601.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_sjinq")
theme_override_styles/fill = SubResource("StyleBoxFlat_uuvn6")
max_value = 3.0
value = 3.0
show_percentage = false

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/mainMenu/MarginContainer/VBoxContainer/hostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/mainMenu/MarginContainer/VBoxContainer/joinButton" to="." method="_on_join_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
